Test/InvalidFiles/PgCompletionist/Local9.xaml
<Window xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
            xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
            xmlns:local="clr-namespace:PgCompletionist">
    <TextBlock Grid.Row.Column="0" />
    <TextBlock Bad.Column="0" />
</Window>
